<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/nytimes_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:src="@drawable/nytimes" />

    <TextView
        android:id="@+id/about_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nytimes_logo"
        android:fontFamily="sans-serif-black"
        android:text="@string/nytimes_about1"
        android:textAlignment="center"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/about_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_1"
        android:text="@string/nytimes_about2"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/about_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_2"
        android:text="@string/nytimes_about3"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/about_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_3"
        android:fontFamily="sans-serif-black"
        android:text="@string/nytimes_about4"
        android:textAlignment="center"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/about_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_4"
        android:text="@string/nytimes_about5"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/about_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_5"
        android:layout_gravity="left"
        android:text="@string/nytimes_about6" />

    <TextView
        android:id="@+id/about_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_6"
        android:layout_gravity="left"
        android:text="@string/nytimes_about7" />

    <TextView
        android:id="@+id/about_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_7"
        android:layout_gravity="left"
        android:text="@string/nytimes_about8" />

    <TextView
        android:id="@+id/about_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_8"
        android:layout_gravity="left"
        android:text="@string/nytimes_about9" />

    <TextView
        android:id="@+id/about_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_9"
        android:layout_gravity="left"
        android:text="@string/nytimes_about10" />
</RelativeLayout>