<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_alignParentStart="true"
    android:layout_marginStart="0dp"
    android:minHeight="?android:attr/actionBarSize"
    app:titleTextColor="@android:color/white">

    <EditText
        android:id="@+id/etQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:imeOptions="actionSearch"
        android:inputType="text" />


    <Button
        android:id="@+id/savedArticles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/savedArticles" />
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="onArticleSearch"
        android:text="@string/search" />


</android.support.v7.widget.Toolbar>
